<com.runner.jjz.slidingmenu.SlidingMenu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/id_menu"
    android:scrollbars="none"
    android:background="@drawable/mbjt">
    
    <LinearLayout 
        android:layout_width="wrap_content" 
        android:layout_height="fill_parent"
        android:orientation="horizontal">
        
        <include layout="@layout/menu" /> 
        
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">"
            
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/show_balance"
                 android:textSize="30dp"
                 android:layout_gravity="center" />

             <TextView
                 android:id="@+id/balance"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:layout_gravity="center" />
             <LinearLayout 
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">"
                 <Button
                     android:id="@+id/add"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/add"
                     android:layout_weight="1"/>
                 <Button
                     android:id="@+id/inquire"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/inquire"
                     android:layout_weight="1"/>
                 <Button
                     android:id="@+id/rental"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/rental"
                     android:layout_weight="1"/>
             </LinearLayout>
         </LinearLayout>
    </LinearLayout>
</com.runner.jjz.slidingmenu.SlidingMenu>
